prebuilt_files = [
    'a3m02a.SAD',
    'a3m03a.SAD',
    'a3m03b.SAD',
    'a3m04a.SAD',
    'a3m05a.SAD',
    'a3m05b.SAD',
    'a3m05c.SAD',
    'a3m05d.SAD',
    'a3m05e.SAD',
    'a3m05f.SAD',
    'a3m06a.SAD',
    'a3m07a.SAD',
    'a3m08a.SAD',
    'a3m09a.SAD',
    'a3m10a.SAD',
    'a3m11a.SAD',
    'a3m11b.SAD',
    'a3m12a.SAD',
    'a3m13a.SAD',
    'a3m14a.SAD',
    'a3m15a.SAD',
    'a3m16a.SAD',
    'a3m17a.SAD',
    'a3m18a.SAD',
    'a3m19a.SAD',
    'a3m20a.SAD',
    'a3m21a.SAD',
    'a3m22a.SAD',
    'a3m23a.SAD',
    'a3m24a.SAD',
    'a3m25a.SAD',
    'a3m26a.SAD',
    'a3m27a.SAD',
    'a3m28a.SAD',
    'a3m29a.SAD',
    'a3m30a.SAD',
    'a3m31a.SAD',
    'a3m32a.SAD',
    'a3m33a.SAD',
    'a3m34a.SAD',
    'a3m35a.SAD',
    'a3m36a.SAD',
    'a3m37a.SAD',
    'a3m38a.SAD',
    'a3m39a.SAD',
    'a3m40a.SAD',
    'a3m41a.SAD',
    'a3m42a.SAD',
    'a3m43a.SAD',
    'a3m45a.SAD',
    'a3m46a.SAD',
    'a3m81a.SAD',
    'a3m82a.SAD',
    'a3m83a.SAD',
    'a3m84a.SAD',
    'a3m85a.SAD',
    'a3y01f.SAD',
    'a3y02f.SAD',
    'a3y03f.SAD',
    'a3y04f.SAD',
    'end00f.SAD',
    'J01.SAD',
    'J02.SAD',
    'J04.SAD',
    'J05.SAD',
    'J06.SAD',
    'J07.SAD',
    'J10.SAD',
    'J12.SAD',
    'J13.SAD',
    'J14.SAD',
    'J17_LOOP.SAD',
    'J18.SAD',
    'J19.SAD',
    'J21.SAD',
    'op00f.SAD',
    'pv_o1.SAD',
    'pv_o2.SAD',
    'sound.pkb',
    'sound.pkh',
    'TITLE.SAD',
    'V0101a01.SAD',
    'V0101a02.SAD',
    'V0101a03.SAD',
    'V0102a01.SAD',
    'V0102a02.SAD',
    'V0102a03.SAD',
    'V0102a04.SAD',
    'V0102a05.SAD',
    'V0102a06.SAD',
    'V0102a07.SAD',
    'V0103a01.SAD',
    'V0103a02.SAD',
    'V0103a03.SAD',
    'V0103a04.SAD',
    'V0103a05.SAD',
    'V0103a06.SAD',
    'V0103a07.SAD',
    'V0103a08.SAD',
    'V0103a09.SAD',
    'V0103a10.SAD',
    'V0103a11.SAD',
    'V0103a12.SAD',
    'V0103a13.SAD',
    'V0103a14.SAD',
    'V0103a15.SAD',
    'V0103a16.SAD',
    'V0103a17.SAD',
    'V0104a01.SAD',
    'V0104a02.SAD',
    'V0104a03.SAD',
    'V0104a04.SAD',
    'V0105a01.SAD',
    'V0105a02.SAD',
    'V0105a03.SAD',
    'V0105a04.SAD',
    'V0106a01.SAD',
    'V0106a02.SAD',
    'V0106a03.SAD',
    'V0106a04.SAD',
    'V0106a05.SAD',
    'V0106a06.SAD',
    'V0107a01.SAD',
    'V0107a02.SAD',
    'V0107a03.SAD',
    'V0107a04.SAD',
    'V0107a05.SAD',
    'V0107a06.SAD',
    'V0107a07.SAD',
    'V0107a08.SAD',
    'V0107a09.SAD',
    'V0107a10.SAD',
    'V0108a01.SAD',
    'V0108a02.SAD',
    'V0108a03.SAD',
    'V0108a04.SAD',
    'V0109a01.SAD',
    'V0109a02.SAD',
    'V0109a03.SAD',
    'V0109a04.SAD',
    'V0109a05.SAD',
    'V0109a06.SAD',
    'V0109a07.SAD',
    'V0109a08.SAD',
    'V0109a09.SAD',
    'V0110a01.SAD',
    'V0110a02.SAD',
    'V0110a03.SAD',
    'V0110a04.SAD',
    'V0110a05.SAD',
    'V0110a06.SAD',
    'V0111a01.SAD',
    'V0111a02.SAD',
    'V0111a03.SAD',
    'V0111a04.SAD',
    'V0111a05.SAD',
    'V0111a06.SAD',
    'V0111a07.SAD',
    'V0112a01.SAD',
    'V0112a02.SAD',
    'V0112a03.SAD',
    'V0112a04.SAD',
    'V0112a05.SAD',
    'V0112a06.SAD',
    'V0112a07.SAD',
    'V0112a08.SAD',
    'V0112a09.SAD',
    'V0112a10.SAD',
    'V0112a11.SAD',
    'V0112a12.SAD',
    'V0112a13.SAD',
    'V0112a14.SAD',
    'V0112a15.SAD',
    'V0112a16.SAD',
    'V0112a17.SAD',
    'V0112a18.SAD',
    'V0112a19.SAD',
    'V0112a20.SAD',
    'V0112a21.SAD',
    'V0112a22.SAD',
    'V0112a23.SAD',
    'V0112a24.SAD',
    'V0112a25.SAD',
    'V0112a26.SAD',
    'V0112a27.SAD',
    'V0112a28.SAD',
    'V0112a29.SAD',
    'V0112a30.SAD',
    'V0112a31.SAD',
    'V0113a01.SAD',
    'V0113a02.SAD',
    'V0113a03.SAD',
    'V0113a04.SAD',
    'V0113a05.SAD',
    'V0113a06.SAD',
    'V0113a07.SAD',
    'V0114a01.SAD',
    'V0114a02.SAD',
    'V0120a01.SAD',
    'V0120a02.SAD',
    'V0120a03.SAD',
    'V0120a04.SAD',
    'V0120a05.SAD',
    'V0121a01.SAD',
    'V0121a02.SAD',
    'V0121a03.SAD',
    'V0121a04.SAD',
    'V0121a05.SAD',
    'V0121a06.SAD',
    'V0121a07.SAD',
    'V0121a08.SAD',
    'V0121a09.SAD',
    'V0121a10.SAD',
    'V0201a01.SAD',
    'V0201a02.SAD',
    'V0201a03.SAD',
    'V0201a04.SAD',
    'V0201a05.SAD',
    'V0201a06.SAD',
    'V0201a07.SAD',
    'V0201a08.SAD',
    'V0201a09.SAD',
    'V0202a01.SAD',
    'V0202a02.SAD',
    'V0202a03.SAD',
    'V0202a04.SAD',
    'V0202a05.SAD',
    'V0202a06.SAD',
    'V0202a07.SAD',
    'V0202a08.SAD',
    'V0202a09.SAD',
    'V0202a10.SAD',
    'V0203a01.SAD',
    'V0203a02.SAD',
    'V0204a01.SAD',
    'V0204a02.SAD',
    'V0204a03.SAD',
    'V0204a04.SAD',
    'V0204a05.SAD',
    'V0301a01.SAD',
    'V0301a02.SAD',
    'V0301a03.SAD',
    'V0301a04.SAD',
    'V0301a05.SAD',
    'V0301a06.SAD',
    'V0301a07.SAD',
    'V0301a08.SAD',
    'V0301a09.SAD',
    'V0301a10.SAD',
    'V0301a11.SAD',
    'V0301a12.SAD',
    'V0301a13.SAD',
    'V0301a14.SAD',
    'V0301a15.SAD',
    'V0301a16.SAD',
    'V0301a17.SAD',
    'V0301a18.SAD',
    'V0301a19.SAD',
    'V0301a20.SAD',
    'V0301a21.SAD',
    'V0302a01.SAD',
    'V0302a02.SAD',
    'V0302a03.SAD',
    'V0302a04.SAD',
    'V0302a05.SAD',
    'V0302a06.SAD',
    'V0303a01.SAD',
    'V0303a02.SAD',
    'V0303a03.SAD',
    'V0303a04.SAD',
    'V0303a05.SAD',
    'V0303a06.SAD',
    'V0303a07.SAD',
    'V0303a08.SAD',
    'V0304a01.SAD',
    'V0401a01.SAD',
    'V0401a02.SAD',
    'V0401a03.SAD',
    'V0401a04.SAD',
    'V0401a05.SAD',
    'V0402a01.SAD',
    'V0402a02.SAD',
    'V0403a01.SAD',
    'V0403a02.SAD',
    'V0403a03.SAD',
    'V0403a04.SAD',
    'V0403a05.SAD',
    'V0403a06.SAD',
    'V0404a01.SAD',
    'V0404a02.SAD',
    'V0404a03.SAD',
    'V0404a04.SAD',
    'V0404a05.SAD',
    'V0404a06.SAD',
    'V0404a06b.SAD',
    'V0404a07.SAD',
    'V0404a08.SAD',
    'V0404a09.SAD',
    'V0404a10.SAD',
    'V0404a11.SAD',
    'V0404a12.SAD',
    'V0404a13.SAD',
    'V0405a01.SAD',
    'V0405a02.SAD',
    'V0405a03.SAD',
    'V0405a04.SAD',
    'V0405a05.SAD',
    'V0405a06.SAD',
    'V0405a07.SAD',
    'V0405a08.SAD',
    'V0405a09.SAD',
    'V0406a01.SAD',
    'V0406a02.SAD',
    'V0406a03.SAD',
    'V0406a04.SAD',
    'V0406a05.SAD',
    'V0406a06.SAD',
    'V0406a07.SAD',
    'V0406a08.SAD',
    'V0406a09.SAD',
    'V0406a10.SAD',
    'V0406a11.SAD',
    'V0406a12.SAD',
    'V0406a13.SAD',
    'V0406a14.SAD',
    'V0406a15.SAD',
    'V0406a16.SAD',
    'V0407a01.SAD',
    'V0407a02.SAD',
    'V0407a03.SAD',
    'V0407a04.SAD',
    'V0407a05.SAD',
    'V0407a06.SAD',
    'V0407a07.SAD',
    'V0407a08.SAD',
    'V0407a09.SAD',
    'V0407a10.SAD',
    'V0407a11.SAD',
    'V0407a12.SAD',
    'V0407a13.SAD',
    'V0408a01.SAD',
    'V0408a02.SAD',
    'V0408a03.SAD',
    'V0408a04.SAD',
    'V0408a05.SAD',
    'V0408a06.SAD',
    'V0408a07.SAD',
    'V0408a08.SAD',
    'V0408a09.SAD',
    'V0408a10.SAD',
    'V0408a11.SAD',
    'V0408a12.SAD',
    'V0408a13.SAD',
    'V0501a01.SAD',
    'V0501a02.SAD',
    'V0501a03.SAD',
    'V0501a04.SAD',
    'V0501a05.SAD',
    'V0501a06.SAD',
    'V0501a07.SAD',
    'V0501a08.SAD',
    'V0501a09.SAD',
    'V0501a10.SAD',
    'V0502a01.SAD',
    'V0502a02.SAD',
    'V0502a03.SAD',
    'V0502a04.SAD',
    'V0502a05.SAD',
    'V0502a06.SAD',
    'V0502a07.SAD',
    'V0502a08.SAD',
    'V0502a09.SAD',
    'V0502a10.SAD',
    'V0502a11.SAD',
    'V0502a12.SAD',
    'V0502a13.SAD',
    'V0502a14.SAD',
    'V0502a15.SAD',
    'V0502a16.SAD',
    'V0502a17.SAD',
    'V0502a18.SAD',
    'V0502a19.SAD',
    'V0502a20.SAD',
    'V0503a01.SAD',
    'V0503a02.SAD',
    'V0503a03.SAD',
    'V0504a01.SAD',
    'V0505a01.SAD',
    'V0505a02.SAD',
    'V0505a03.SAD',
    'V0505a04.SAD',
    'V0505a05.SAD',
    'V0505a06.SAD',
    'V0505a07.SAD',
    'V0505a08.SAD',
    'V0505a09.SAD',
    'V0505a10.SAD',
    'V0505a11.SAD',
    'V0505a12.SAD',
    'V0505a13.SAD',
    'V0505a14.SAD',
    'V0506a01.SAD',
    'V0506a02.SAD',
    'V0506a03.SAD',
    'V0506a04.SAD',
    'V0601a01.SAD',
    'V0601a02.SAD',
    'V0620a01.SAD',
    'V0620a02.SAD',
    'V0620a03.SAD',
    'V0620a04.SAD',
    'V0620a05.SAD',
    'V0620a06.SAD',
    'V0701a01.SAD',
    'V0701a02.SAD',
    'V0702a01.SAD',
    'V0702a02.SAD',
    'V0702a03.SAD',
    'V0702a04.SAD',
    'V0702a05.SAD',
    'V0702a06.SAD',
    'V0702a07.SAD',
    'V0702a08.SAD',
    'V0702a09.SAD',
    'V0703a01.SAD',
    'V0703a02.SAD',
    'V0703a03.SAD',
    'V0703a04.SAD',
    'V0703a05.SAD',
    'V0703a06.SAD',
    'V0703a07.SAD',
    'V0703a08.SAD',
    'V0703a09.SAD',
    'V0703a10.SAD',
    'V0703a11.SAD',
    'V0703a12.SAD',
    'V0703a13.SAD',
    'V0703a14.SAD',
    'V0703a15.SAD',
    'V0703a16.SAD',
    'V0703a17.SAD',
    'V0703a17b.SAD',
    'V0703a18.SAD',
    'V0703a19.SAD',
    'V0801a01.SAD',
    'V0801a02.SAD',
    'V0801a03.SAD',
    'V0801a04.SAD',
    'V0801a05.SAD',
    'V0801a06.SAD',
    'V0801a07.SAD',
    'V0801a08.SAD',
    'V0801a09.SAD',
    'V0801a10.SAD',
    'V0801a11.SAD',
    'V0802a01.SAD',
    'V0802a02.SAD',
    'V0802a03.SAD',
    'V0802a04.SAD',
    'V0802a05.SAD',
    'V0802a06.SAD',
    'V0802a07.SAD',
    'V0802a08.SAD',
    'V0802a09.SAD',
    'V0802a10.SAD',
    'V0802a11.SAD',
    'V0803a01.SAD',
    'V0803a02.SAD',
    'V0803a03.SAD',
    'V0803a04.SAD',
    'V0804a01.SAD',
    'V0804a02.SAD',
    'V0804a03.SAD',
    'V0804a04.SAD',
    'V0804a05.SAD',
    'V0804a06.SAD',
    'V0804a07.SAD',
    'V0820a01.SAD',
    'V0820a02.SAD',
    'V0821a01.SAD',
    'V0821a02.SAD',
    'V0821a03.SAD',
    'V0821a04.SAD',
    'V0822a01.SAD',
    'V0822a02.SAD',
    'V0822a03.SAD',
    'V0822a04.SAD',
    'V0822a05.SAD',
    'V0822a06.SAD',
    'V0822a07.SAD',
    'V0822a08.SAD',
    'V0822a09.SAD',
    'V0901a01.SAD',
    'V0901a02.SAD',
    'V0901a03.SAD',
    'V0901a04.SAD',
    'V0901a05.SAD',
    'V0901a06.SAD',
    'V0901a07.SAD',
    'V0902a01.SAD',
    'V0902a02.SAD',
    'V1001a01.SAD',
    'V1001a02.SAD',
    'V1001a03.SAD',
    'V1001a04.SAD',
    'V1002a01.SAD',
    'V1002a02.SAD',
    'V1002a03.SAD',
    'V1002a04.SAD',
    'V1002a05.SAD',
    'V1002a06.SAD',
    'V1002a07.SAD',
    'V1002a08.SAD',
    'V1002a09.SAD',
    'V1002a10.SAD',
    'V1002a11.SAD',
    'V1002a12.SAD',
    'V1002a13.SAD',
    'V1002a14.SAD',
    'V1002a15.SAD',
    'V1002a16.SAD',
    'V1002a17.SAD',
    'V1002a18.SAD',
    'V1002a19.SAD',
    'V1002a20.SAD',
    'V1003a01.SAD',
    'V1004a01.SAD',
    'V1004a02.SAD',
    'V1004a03.SAD',
    'V1004a04.SAD',
    'V1004a04b.SAD',
    'V1004a04c.SAD',
    'V1004a05.SAD',
    'V1004a06.SAD',
    'V1004a07.SAD',
    'V1005a01.SAD',
    'V1005a02.SAD',
    'V1005a03.SAD',
    'V1005a04.SAD',
    'V1006a01.SAD',
    'V1006a02.SAD',
    'V1006a03.SAD',
    'V1006a04.SAD',
    'V1006a05.SAD',
    'V9901A01.SAD',
    'V9901A02.SAD',
    'V9901A03.SAD',
    'V9901A04.SAD',
    'V9901A05.SAD',
    'V9901A06.SAD',
    'V9901A07.SAD',
    'V9901A08.SAD',
    'V9901A09.SAD'
]

foreach f : prebuilt_files
    nitrofs_files += fs.copyfile(f)
endforeach