twldwc_asm = files(
    'ac/wds.s',
    'ac/beacon.s',
    'ac/callback.s',
    'ac/close.s',
    'ac/connect.s',
    'ac/dwc_ac.s',
    'ac/dwc_connectinet.s',
    'ac/error.s',
    'ac/makelist.s',
    'ac/nintendospot.s',
    'ac/retry.s',
    'ac/search.s',
    'ac/shop_usb.s',
    'ac/start.s',
    'ac/test.s',
    'auth/dwc_auth.s',
    'auth/dwc_auth_interface.s',
    'auth/dwc_cal.s',
    'auth/dwc_http.s',
    'auth/dwc_netcheck.s',
    'auth/dwc_svl.s',
    'auth/dwc_ca_cybertrust_baltimore.s',
    'auth/dwc_ca_cybertrust_globalsign.s',
    'auth/dwc_ca_cybertrust_gteglroot.s',
    'auth/dwc_ca_cybertrust_gteroot.s',
    'auth/dwc_ca_globalsign_rootcar2.s',
    'auth/dwc_ca_nas_self.s',
    'auth/dwc_ca_thawte_premiumserver.s',
    'auth/dwc_ca_thawte_server.s',
    'auth/dwc_ca_verisign_c3pcag2v2.s',
    'auth/dwc_ca_verisign_c3pcag3v2.s',
    'auth/dwc_ca_verisign_pca3ssg4.s',
    'auth/dwc_ca_verisign_secureserver.s',
    'bm/dwc_backup.s',
    'bm/dwc_bm_init.s',
    'bm/util_wifiidtool.s',
    'common/dwc_base64.s',
    'common/dwc_error.s',
    'common/dwc_init.s',
    'common/dwc_memfunc.s',
    'nas/dwc_nasfunc.s',
    'nas/dwc_nastime.s',
    'nd/dwc_nd.s',
    'nd/dwci_nd.s',
    'nhttp/nhttp_os_ntr.s',
    'nhttp/nhttp_socket_ntr.s',
    'nhttp/nhttp_stdlib_ntr.s',
    'nhttp/nhttp_bgnend.s',
    'nhttp/nhttp_control.s',
    'nhttp/nhttp_list.s',
    'nhttp/nhttp_recvbuf.s',
    'nhttp/nhttp_request.s',
    'nhttp/nhttp_response.s',
    'nhttp/nhttp_thread.s',
    'nhttp/d_nhttp.s',
    'nhttp/d_nhttp_common.s',
    'nhttp/d_nhttp_private.s',
    'util/aoss.s',
    'util/aosslink.s',
    'util/apc.s',
    'util/atermset.s',
    'util/anime.s',
    'util/button.s',
    'util/comment.s',
    'util/common.s',
    'util/focus.s',
    'util/headline.s',
    'util/icon.s',
    'util/keyboard.s',
    'util/keyboard10.s',
    'util/libaoss.s',
    'util/main.s',
    'util/message.s',
    'util/move.s',
    'util/rakuraku.s',
    'util/sceneend.s',
    'util/sceneinit.s',
    'util/scenemenu.s',
    'util/sceneopterase.s',
    'util/sceneopterase1.s',
    'util/sceneoptinfo.s',
    'util/sceneoptmenu.s',
    'util/sceneoptmovcomm.s',
    'util/sceneoptmovcomplete.s',
    'util/sceneoptmovconfirm.s',
    'util/sceneoptmovconfirm1.s',
    'util/sceneoptmovdisconnect.s',
    'util/sceneoptmovfailure.s',
    'util/sceneoptmovuser.s',
    'util/sceneoptmovwait.s',
    'util/scenesetaossbutton.s',
    'util/scenesetaosscomplete.s',
    'util/scenesetaplist.s',
    'util/scenesetedit32.s',
    'util/sceneseteditaddress.s',
    'util/sceneseterror.s',
    'util/scenesetlist.s',
    'util/scenesetlistsave.s',
    'util/scenesetrakubutton.s',
    'util/scenesetrakubutton1.s',
    'util/scenesetrakucomplete.s',
    'util/scenesetrakuready.s',
    'util/scenesetsearch.s',
    'util/scenesetselectap.s',
    'util/scenesetselectway.s',
    'util/scenesettest.s',
    'util/scenesettestcompletet.s',
    'util/scenesettestconfirm.s',
    'util/scenesetusbcomplete.s',
    'util/scenesetusbready.s',
    'util/scenesetusbready1.s',
    'util/screen.s',
    'util/scrollbar.s',
    'util/search_dwc_util.s',
    'util/setting.s',
    'util/sound.s',
    'util/step.s',
    'util/usbap.s',
    'util/window.s',
    'util/dwc_mov_mbp.s',
    'util/dwc_mov_wh.s',
    'util/dwc_moveid.s',
    'util/archive_.s',
    'util/cell.s',
    'util/cellinfo.s',
    'util/deque.s',
    'util/effect.s',
    'util/font.s',
    'util/foundation.s',
    'util/graphics.s',
    'util/heap.s',
    'util/input.s',
    'util/interrupt.s',
    'util/list.s',
    'util/obj.s',
    'util/objvram.s',
    'util/str.s',
    'util/sub.s',
    'util/task.s'
)
