twlwifi_asm = files(
    'cps/network.s',
    'soc/socl_startup.s',
    'soc/socl_command.s',
    'soc/socl_create.s',
    'soc/socl_bind.s',
    'soc/socl_read.s',
    'soc/socl_write.s',
    'soc/socl_shutdown.s',
    'soc/socl_close.s',
    'soc/socl_cleanup.s',
    'soc/socl_const.s',
    'soc/socl_resolve.s',
    'soc/socl_poll.s',
    'soc/socl_misc.s',
    'soc/socl_list.s',
    'soc/soc.s',
    'soc/socl_ssl.s',
    'ssl/ssl.s',
    'ssl/md5.s',
    'ssl/sha1.s',
    'ssl/arc4.s',
    'ssl/biginteger.s',
    'wcm/system.s',
    'wcm/aplist.s',
    'wcm/cpsif.s',
    'wcm/util.s',
    'wcm/wmif.s'
)
