prebuilt_files = [
    'body_no.pac_',
    'pbb.pkb',
    'pbb.pkh',
    'pbf.pkb',
    'pbf.pkh',
    'pbh.pkb',
    'pbh.pkh',
    'pbs.pkb',
    'pbs.pkh',
    'pcm.pkb',
    'pcm.pkh',
    'psb.pkb',
    'psb.pkh',
    'psf.pkb',
    'psf.pkh',
    'psh.pkb',
    'psh.pkh',
    'pss.pkb',
    'pss.pkh',
    'ptb.pkb',
    'ptb.pkh'
]

foreach f : prebuilt_files
    nitrofs_files += fs.copyfile(f)
endforeach