prebuilt_files = [
    'bal_pac.pkb',
    'bal_pac.pkh',
    'cmr.pkb',
    'cmr.pkh',
    'gol_pac.pkb',
    'gol_pac.pkh',
    'mo_pac.pkb',
    'mo_pac.pkh',
    'mr_pac.pkb',
    'mr_pac.pkh',
    'mv_pac.pkb',
    'mv_pac.pkh'
]

foreach f : prebuilt_files
    nitrofs_files += fs.copyfile(f)
endforeach