prebuilt_files = [
    'a3m02a.dat',
    'a3m03a.dat',
    'a3m03b.dat',
    'a3m04a.dat',
    'a3m05a.dat',
    'a3m05b.dat',
    'a3m05c.dat',
    'a3m05d.dat',
    'a3m05e.dat',
    'a3m05f.dat',
    'a3m06a.dat',
    'a3m07a.dat',
    'a3m08a.dat',
    'a3m09a.dat',
    'a3m10a.dat',
    'a3m11a.dat',
    'a3m11b.dat',
    'a3m12a.dat',
    'a3m13a.dat',
    'a3m14a.dat',
    'a3m15a.dat',
    'a3m16a.dat',
    'a3m17a.dat',
    'a3m18a.dat',
    'a3m19a.dat',
    'a3m20a.dat',
    'a3m21a.dat',
    'a3m22a.dat',
    'a3m23a.dat',
    'a3m24a.dat',
    'a3m25a.dat',
    'a3m27a.dat',
    'a3m28a.dat',
    'a3m30a.dat',
    'a3m32a.dat',
    'a3m33a.dat',
    'a3m35a.dat',
    'a3m36a.dat',
    'a3m38a.dat',
    'a3m39a.dat',
    'a3m40a.dat',
    'a3m41a.dat',
    'a3m42a.dat',
    'a3m43a.dat',
    'a3m45a.dat',
    'a3m81a.dat',
    'a3m82a.dat',
    'a3m83a.dat',
    'a3m84a.dat',
    'a3m85a.dat',
    'op00f.dat'
]

foreach f : prebuilt_files
    nitrofs_files += fs.copyfile(f)
endforeach