prebuilt_files = [
    'ina_tpx1.pac_',
    'ina_tpx2.pac_',
    'ina_tpx3.pac_',
    'ina_tpx4.pac_',
    'ina_tpx5.pac_',
    'ina_tpx6.pac_',
    'ina_tpx7.pac_',
    'ina_tpx8.pac_',
    'mlup_filter.pac_',
    'mlup_i00.pac_',
    'mlup_i01.pac_',
    'mlup_i02.pac_',
    'mlup_p00.pac_',
    'mlup_p01.pac_',
    'mlup_w00.pac_'
]

foreach f : prebuilt_files
    nitrofs_files += fs.copyfile(f)
endforeach