prebuilt_files = [
    'eddf01.pac_',
    'eddf02.pac_',
    'eddf03.pac_',
    'eddf04.pac_',
    'eddf05.pac_',
    'eddf06.pac_',
    'eddf07.pac_',
    'eddf08.pac_',
    'eddf09.pac_',
    'eddf10.pac_',
    'eddf11.pac_',
    'eddf12.pac_',
    'eddf13.pac_',
    'eddf14.pac_',
    'eddf15.pac_',
    'eddf16.pac_',
    'eddf17.pac_',
    'eddf18.pac_',
    'eddf19.pac_',
    'eddf20.pac_',
    'eddf21.pac_',
    'eddf22.pac_',
    'eddf23.pac_',
    'eddf24.pac_',
    'eddf25.pac_',
    'eddf26.pac_',
    'eddf27.pac_',
    'eddf28.pac_',
    'eddf29.pac_',
    'eddf30.pac_',
    'eddf31.pac_',
    'eddf32.pac_',
    'eddf33.pac_',
    'eddf34.pac_',
    'eddf35.pac_',
    'eddf36.pac_',
    'eddf37.pac_',
    'edu00f.pac_',
    'edu01f.pac_',
    'edu02.pac_',
    'edu03.pac_',
    'edu04.pac_',
    'edu05.pac_',
    'edu06.pac_',
    'edu07.pac_',
    'edu08.pac_',
    'edu09.pac_',
    'edu10.pac_',
    'edu11.pac_',
    'edu12.pac_',
    'edu13.pac_',
    'edu14.pac_',
    'edu15.pac_',
    'edu16.pac_',
    'edu17.pac_',
    'edu18.pac_',
    'edu19.pac_',
    'edu20.pac_',
    'edu21.pac_',
    'edu22.pac_',
    'edu23.pac_',
    'edu24.pac_',
    'edu25.pac_',
    'edu26.pac_',
    'edu27.pac_',
    'edu28.pac_',
    'edu29.pac_',
    'edu30.pac_',
    'edu31.pac_',
    'edu32.pac_',
    'edu33.pac_',
    'edu34.pac_',
    'edu35.pac_',
    'edu36.pac_',
    'edu37.pac_',
    'edu38.pac_',
    'edu39.pac_',
    'edufin.pac_'
]

foreach f : prebuilt_files
    nitrofs_files += fs.copyfile(f)
endforeach