prebuilt_files = [
    '_mbdn_bg00.pac_',
    'jmup_bg00.pac_',
    'klup_bg00.pac_',
    'MASConfig.SPF_',
    'MASTutorial.SPF_',
    'menu_MovieViewSub.pkb',
    'menu_MovieViewSub.pkh',
    'MGMap.SPF_',
    'MGMap_01.SPF_',
    'MGMap_02.SPF_',
    'MGMap_03.SPF_',
    'MGMap_04.SPF_',
    'MGMap_05.SPF_',
    'MGMap_06.SPF_',
    'MGMap_07.SPF_',
    'MGMap_08.SPF_',
    'MGMap_09.SPF_',
    'MGMap_10.SPF_',
    'MMName.SPF_',
    'MMProfd.SPF_',
    'MMProfu.SPF_',
    'MMQuit.SPF_',
    'MMSlot.SPF_',
    'MMTk.SPF_',
    'msup_bg00.pac_',
    'msup_bg01.pac_',
    'msup_bg02.pac_',
    'msup_bg04.pac_',
    'msup_bg05.pac_',
    'msup_bg07.pac_',
    'msup_bg08.pac_',
    'msup_bg09.pac_',
    'msup_f12.pac_',
    'mvdn_e.pkb',
    'mvdn_e.pkh',
    'mvdn_q.pkb',
    'mvdn_q.pkh',
    'mvup_bg1.pac_',
    'mvup_w01.pac_',
    'nedn_bg00.pac_',
    'nedn_bg04.pac_',
    'nedn_bg05.pac_',
    'nedn_bg08.pac_',
    'nedn_bg10.pac_',
    'prdn_bg00.pac_',
    'pwup_bg00.pac_',
    'scdn_bg00.pac_',
    'scdn_bg01.pac_',
    'sfdn_i09.pac_',
    'SMBinder1.SPF_',
    'SMBinder2.SPF_',
    'SMBlog1.SPF_',
    'SMBlog2.SPF_',
    'SMCollection.SPF_',
    'SMEquip.SPF_',
    'SMJinmyaku.SPF_',
    'SMMovieLink.SPF_',
    'SMPractice.SPF_',
    'SMShop.SPF_',
    'SMSpCmd.SPF_',
    'SMStat.SPF_',
    'SMTournament.SPF_',
    'SMWazaBinder.SPF_',
    'SMWd.SPF_',
    'SVInabikari.SPF_',
    'SVInabikari_e.SPF_',
    'wdup_bg00.pac_'
]

foreach f : prebuilt_files
    nitrofs_files += fs.copyfile(f)
endforeach