prebuilt_files = [
    'gmdn_s.pkb',
    'gmdn_s.pkh',
    'mgu_td.pkb',
    'mgu_td.pkh',
    'mgu_tu.pkb',
    'mgu_tu.pkh',
    'pkup_e.pkb',
    'pkup_e.pkh',
    'pkup_t.pkb',
    'pkup_t.pkh',
    'po_e.pkb',
    'po_e.pkh',
    'po_n.pkb',
    'po_n.pkh',
    'po_s.pkb',
    'po_s.pkh',
    'po_t.pkb',
    'po_t.pkh',
    'po_w.pkb',
    'po_w.pkh'
]

foreach f : prebuilt_files
    nitrofs_files += fs.copyfile(f)
endforeach