prebuilt_files = [
    'ActimagineOriginal.pac_',
    'atdn_03.pac_',
    'atdn_04.pac_',
    'cesa_00.pac_',
    'level5.pac_',
    'level5_bottom.pac_',
    'MTSIni.SPF_',
    'nedn_bg04.pac_',
    'Nintendo.pac_',
    'STSIni.SPF_',
    'STSIni_b.SPF_',
    'STSIni_f.SPF_',
    'STSIni_t.SPF_',
    'TaikenIni.SPF_'
]

foreach f : prebuilt_files
    nitrofs_files += fs.copyfile(f)
endforeach