prebuilt_files = [
    'atdn_02.pac_',
    'c3t0100.pac_',
    'c3t0101.pac_',
    'c3t0102.pac_',
    'c3t0103.pac_',
    'c3t0104.pac_',
    'c3t0105.pac_',
    'c3t0106.pac_',
    'c3t0107.pac_',
    'c3t0108.pac_',
    'c3t0109.pac_',
    'c3t0110.pac_',
    'c3t0111.pac_',
    'c3t0112.pac_',
    'c3t0113.pac_',
    'c3t0201.pac_',
    'c3t0202.pac_',
    'c3t0203.pac_',
    'c3t0204.pac_',
    'c3t0205.pac_',
    'c3t0301.pac_',
    'c3t0302.pac_',
    'c3t0401.pac_',
    'c3t0402.pac_',
    'c3t0403.pac_',
    'c3t0404.pac_',
    'c3t0405.pac_',
    'c3t0501.pac_',
    'c3t0601.pac_',
    'c3t0602.pac_',
    'c3t0701.pac_',
    'c3t0702.pac_',
    'c3t0703.pac_',
    'c3t0801.pac_',
    'c3t0802.pac_',
    'c3t0901.pac_',
    'c3t1002.pac_',
    'c3t1003.pac_',
    'c3t1004.pac_',
    'c3t1005.pac_',
    'c3t1006.pac_',
    'c3t1010.pac_',
    'c3t1011.pac_',
    'c3t1012.pac_',
    'c3t1013.pac_',
    'c3t1301.pac_',
    'c3t1302.pac_',
    'edn_bg00.pac_',
    'edn_bg02.pac_',
    'emdn_bg01.pac_',
    'emdn_bg02.pac_',
    'emdn_bg03.pac_',
    'emdn_bg04.pac_',
    'gmapdn_w01.pac_',
    'gmdn_f00.pac_',
    'gmdn_f01.pac_',
    'gmdn_f02.pac_',
    'gmdn_f03.pac_',
    'gmdn_v00.pac_',
    'gmdn_v01.pac_',
    'gmdn_v02.pac_',
    'goalImg.pac_',
    'go_01.pac_',
    'hmd_w02.pac_',
    'ie0101.pac_',
    'ie0102.pac_',
    'ie0103.pac_',
    'ie0104.pac_',
    'ie0105.pac_',
    'ie0106.pac_',
    'ie0107.pac_',
    'ie0108.pac_',
    'ie0109.pac_',
    'ie0110.pac_',
    'ie0111.pac_',
    'ie0112.pac_',
    'ie0113.pac_',
    'ie0114.pac_',
    'ie0115.pac_',
    'ie0116.pac_',
    'ie0117.pac_',
    'ie0118.pac_',
    'ie0119.pac_',
    'ie0120.pac_',
    'ie0121.pac_',
    'ie0122.pac_',
    'ie0123.pac_',
    'ie0124.pac_',
    'ie0125.pac_',
    'ie0201.pac_',
    'ie0202.pac_',
    'ie0203.pac_',
    'ie0204.pac_',
    'ie0205.pac_',
    'ie0206.pac_',
    'ie1111.pac_',
    'jsd_w01.pac_',
    'mbdn_u02.pac_',
    'mbvr233k.pac_',
    'mbvr239.pac_',
    'mbvr425.pac_',
    'mbvr427.pac_',
    'mbv_c.pkb',
    'mbv_c.pkh',
    'mln_i00.pac_',
    'mln_w04.pac_',
    'mln_w05.pac_',
    'mpd_m00.pac_',
    'mpd_m01.pac_',
    'mpd_m02.pac_',
    'pdn_b01.pac_',
    'pdn_b02.pac_',
    'pdn_b03.pac_',
    'pdn_t01.pac_',
    'pdn_t02.pac_',
    'pdn_t03.pac_',
    'pdn_t04.pac_',
    'pdn_t05.pac_',
    'pdn_t06.pac_',
    'pdn_t07.pac_',
    'pdn_t08.pac_',
    'pdn_t09.pac_',
    'pdn_t10.pac_',
    'pdn_w21.pac_',
    'pdn_w22.pac_',
    'pdn_w23.pac_',
    'pdn_w24.pac_',
    'pdn_w25.pac_',
    'pdn_w26.pac_',
    'pdn_w27.pac_',
    'pdn_w28.pac_',
    'pdn_w29.pac_',
    'shdn_w06.pac_',
    'syup_bg00.pac_',
    'syup_bg01.pac_',
    'syup_bg02.pac_',
    'tcv_c.pkb',
    'tcv_c.pkh',
    'tn00.pac_',
    'tn02.pac_',
    'tn04.pac_',
    'tn06.pac_',
    'tn08.pac_',
    'tn20.pac_',
    'tn22.pac_',
    'tn24.pac_',
    'tn26.pac_',
    'tn28.pac_',
    'tn30.pac_',
    'tn32.pac_',
    'tn34.pac_',
    'tn50.pac_',
    'tn52.pac_',
    'tn54.pac_',
    'tt00.pac_',
    'tt01.pac_',
    'tt10.pac_',
    'tt11.pac_',
    'tt12.pac_',
    'tt13.pac_',
    'tt14.pac_',
    'tt15.pac_',
    'tt16.pac_',
    'tt17.pac_',
    'tt18.pac_',
    'tt19.pac_',
    'tt20.pac_',
    'tt21.pac_',
    'tt22.pac_',
    'tt23.pac_',
    'tt24.pac_',
    'tt25.pac_',
    'tt26.pac_',
    'tt27.pac_',
    'tt28.pac_',
    'tt29.pac_',
    'tt30.pac_',
    'tt31.pac_',
    'tt32.pac_',
    'tt33.pac_',
    'tt34.pac_',
    'tt35.pac_',
    'tt36.pac_',
    'tt37.pac_',
    'tt38.pac_',
    'tt39.pac_',
    'tt40.pac_',
    'tt41.pac_',
    'tt42.pac_',
    'tt43.pac_',
    'tt44.pac_',
    'tt45.pac_',
    'tt46.pac_',
    'tt47.pac_',
    'tt48.pac_',
    'tt49.pac_',
    'tt50.pac_',
    'tt51.pac_',
    'tt52.pac_',
    'tt53.pac_',
    'tt54.pac_',
    'tt55.pac_',
    'tt56.pac_',
    'tt57.pac_',
    'tt58.pac_',
    'tt59.pac_',
    'tt60.pac_',
    'tt61.pac_',
    'tt62.pac_',
    'tt63.pac_',
    'tt64.pac_',
    'tt65.pac_',
    'tt66.pac_',
    'tt67.pac_',
    'tt68.pac_',
    'tt69.pac_',
    'tt70.pac_',
    'tt71.pac_',
    'tt74.pac_',
    'tt75.pac_',
    'tt77.pac_',
    'tt78.pac_',
    'tt80.pac_',
    'tt81.pac_',
    'tt82.pac_',
    'tt84.pac_',
    'tt85.pac_',
    'tt86.pac_',
    'tt87.pac_',
    'tt88.pac_',
    'tt89.pac_',
    'tt90.pac_',
    'tt91.pac_',
    'tt92.pac_',
    'tt93.pac_',
    'tt94.pac_',
    'tt95.pac_',
    'tt96.pac_',
    'tt97.pac_',
    'tt98.pac_',
    'y00a.pac_',
    'y01a.pac_',
    'y01b.pac_',
    'y01c.pac_',
    'y01d.pac_',
    'y02a.pac_',
    'y02b.pac_',
    'y02c.pac_',
    'y02d.pac_',
    'y03a.pac_',
    'y03b.pac_',
    'y03c.pac_',
    'y03d.pac_',
    'y04a.pac_',
    'y04b.pac_',
    'y04c.pac_',
    'y04d.pac_',
    'y05a.pac_',
    'y05b.pac_',
    'y05c.pac_',
    'y06a.pac_',
    'y06b.pac_',
    'y06c.pac_',
    'y06d.pac_',
    'y06e.pac_',
    'y07a.pac_',
    'y07b.pac_',
    'y07c.pac_',
    'y07d.pac_',
    'y08a.pac_',
    'y08b.pac_',
    'y08c.pac_',
    'y08d.pac_',
    'y08e.pac_',
    'y08f.pac_',
    'y09a.pac_',
    'y09b.pac_',
    'y09c.pac_',
    'y09d.pac_',
    'y09e.pac_',
    'y09f.pac_',
    'y09g.pac_'
]

foreach f : prebuilt_files
    nitrofs_files += fs.copyfile(f)
endforeach